---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const c : 1 .. 2 := 1\ntype _ : c .. c"
---
"c"@(FileId(1), 6..7) [ConstVar(Const, No)]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"_"@(FileId(1), 27..28) [Type]: alias[DefId(LibraryId(0), LocalDefId(1))] of range of `int` (Unevaluated(LibraryId(0), BodyId(3)) .. Expr(Unevaluated(LibraryId(0), BodyId(4)), No))
"<root>"@(dummy) [Module(No)]: <error>

